traefik/labs/k8s/kube-system/traefik-v2.0-deployment.yaml
---

kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  namespace: kube-system
  name: traefik-v2
  labels:
    app: traefik-v2

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-v2
  template:
    metadata:
      labels:
        app: traefik-v2
        name: traefik-v2
    spec:
      serviceAccountName: traefik-v2
      containers:
        - name: traefik
          image: traefik:v2.0
          args:
            - --global.debug
            - --api
            - --accesslog
            - --entrypoints=Name:web Address::8000
            - --entrypoints=Name:websecure Address::4443
            - --providers.kubernetescrd
            - --providers.kubernetescrd.trace
            - --acme
            - --acme.acmelogging
            - --acme.tlschallenge
            - --acme.onhostrule
            - --acme.email=domains@rael.io
            - --acme.entrypoint=websecure
            - --acme.storage=acme.json
            # Please note that this is the staging Let's Encrypt server. Once you get things
            # working, you should remove that whole line altogether.
            - --acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory
          ports:
            - name: web
              containerPort: 8000
            - name: websecure
              containerPort: 4443
            - name: admin
              containerPort: 8080
