traefik/labs/k8s/kube-system/traefik-v2.0-service-lb.yaml

apiVersion: v1
kind: Service
metadata:
  name: traefik-v2
  namespace: kube-system

spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      name: web
      port: 8000
    - protocol: TCP
      name: admin
      port: 8080
    - protocol: TCP
      name: websecure
      port: 4443
  selector:
    app: traefik-v2
